LPD-97886 Unit test
Claude-Session: https://claude.ai/code/session_01Tmo6N2Eg7xLHaQYuu1TmqF