@@ -13,7 +13,6 @@ import com.liferay.portal.kernel.model.Role;
 import com.liferay.portal.test.rule.LiferayUnitTestRule;
 
 import java.util.Arrays;
-import java.util.List;
 
 import org.junit.Assert;
 import org.junit.ClassRule;
@@ -80,12 +79,12 @@ public class DepotRoleUtilTest {
 					_mockDepotEntry(DepotConstants.TYPE_ASSET_LIBRARY),
 					Arrays.asList(role1, role2, role3, role4, role5)));
 			Assert.assertEquals(
-				List.of(role1),
+				Arrays.asList(role1),
 				DepotRoleUtil.filter(
 					_mockDepotEntry(DepotConstants.TYPE_DESIGN_LIBRARY),
 					Arrays.asList(role1, role2, role3, role4, role5)));
 			Assert.assertEquals(
-				List.of(role2),
+				Arrays.asList(role2),
 				DepotRoleUtil.filter(
 					_mockDepotEntry(DepotConstants.TYPE_PROJECT),
 					Arrays.asList(role1, role2, role3, role4, role5)));
@@ -142,12 +141,12 @@ public class DepotRoleUtilTest {
 				DepotRoleUtil.filter(
 					Arrays.asList(role1, role2, role3, role4, role5), ""));
 			Assert.assertEquals(
-				List.of(role1),
+				Arrays.asList(role1),
 				DepotRoleUtil.filter(
 					Arrays.asList(role1, role2, role3, role4, role5),
 					DepotRolesConstants.SUBTYPE_DESIGN_LIBRARY));
 			Assert.assertEquals(
-				List.of(role2),
+				Arrays.asList(role2),
 				DepotRoleUtil.filter(
 					Arrays.asList(role1, role2, role3, role4, role5),
 					DepotRolesConstants.SUBTYPE_PROJECT));
